# libvigor

./: .gitignore  CHANGELOG  Makefile.am  README  README.md  ci  configure.ac  rpm.spec  rpm.spec.in  version.sh
debian/: changelog  control  copyright  libvigor-dev.install  libvigor-dev.lintian-overrides  libvigor0-dbg.lintian-overrides  libvigor0-dev.install  libvigor0-dev.lintian-overrides  libvigor0.install  libvigor0.lintian-overrides  libvigor1-dbg.lintian-overrides  libvigor1.lintian-overrides  rules
debian/source/: options
fuzz/: config.c  config.sh
fuzz/in/: test
include/: vigor.h
re/: lease  notes
src/: basex.c  bstar.c  cache.c  cert.c  config.c  daemon.c  fqdn.c  ha.c  hash.c  hb.c  impl.h  libvigor.pc.in  list.c  lock.c  log.c  mem.c  meta.c  mq.c  path.c  proc.c  rand.c  reactor.c  run.c  sha1.c  signals.c  strings.c  time.c
t/: basex.c  cache.c  cert.c  config.c  ha.c  hash.c  hb.c  list.c  lock.c  log.c  mem.c  memcheck  memchecker  memleaks  mq.c  path.c  proc.c  reactor.c  run.c  sha1.c  signals.c  strings.c  test.h  time.c
t/data/certs/: public.crt
